--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hbs": "^4.0.1",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.4",
+    "mongoose-findorcreate": "^2.0.0",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
